k8s/overlays/kind/board-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /           # Description : Target URI where the traffic must be redirected
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  ingressClassName: nginx                                   # What kind of Ingress Controller Class
  rules:
  - host: board.api.com                                     # Set hostname configuration file first.
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: board-api-headless-svc                    # Target Service Name
            port:
              number: 9000                                  # Service Port Num.
